--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,18 @@
             <artifactId>jasync-r2dbc-mysql</artifactId>
             <version>2.1.16</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>6.8.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
