--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-server.port = 8080
+server.port=8080
 
 #spring.data.r2dbc.repositories.enabled=true
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/event_reminder
 spring.r2dbc.username=root
 spring.r2dbc.password=rokkiy123
+
+bot.token=6447744106:AAHZORfLuhFZSkryVxzezVtGvFA3Esft3IQ
+server.hostname=localhost:8080
