--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 
 #spring.data.r2dbc.repositories.enabled=true
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/event_reminder
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/erdb
 spring.r2dbc.username=root
-spring.r2dbc.password=rokkiy123
+spring.r2dbc.password=
 
 bot.token=7152223298:AAGkApai0Xku1PQQxgK_GVr_MEIIKDuNJsc
 server.hostname=localhost:8081
