--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8081
 
 #spring.data.r2dbc.repositories.enabled=true
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/erdb
-spring.r2dbc.username=root
-spring.r2dbc.password=
+spring.r2dbc.username=user
+spring.r2dbc.password=1234
 
 bot.token=7152223298:AAGkApai0Xku1PQQxgK_GVr_MEIIKDuNJsc
 server.hostname=localhost:8081
