--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 
 #spring.data.r2dbc.repositories.enabled=true
-spring.r2dbc.url=r2dbc:mysql://192.168.199.46:3306/event_reminder
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/event_reminder
 spring.r2dbc.username=finley
 spring.r2dbc.password=password
 
