--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,5 +1,5 @@
 FROM mysql:latest
 
-COPY db_create.sql /docker-entrypoint-initdb.d/
+COPY DB.sql /docker-entrypoint-initdb.d/
 
 VOLUME /var/lib/mysql/data
