--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,24 @@
 version: "3.9"
 services:
 
-db:
-  build:
-    context: database
-    dockerfile: Dockerfile
-  image: HolyAbel/event_reminder:db
+  db:
+    image: {{ registry_host }}:db
+    container_name: db
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DB: "mysql"
+      MYSQL_USER: "root"
+      MYSQL_PASSWORD: "root"
 
-bot:
-  build:
-    context: bot
-    dockerfile: Dockerfile
-  image: HolyAbel/event_reminder:bot
+  bot:
+    image: {{ registry_host }}:bot
+    container_name: bot
+    ports:
+      - "8081:8081"
+    depends_on:
+      - db
+    environment:
+      SPRING_DATASOURCE_URL: r2dbc:mysql://db:3306/event_reminder
+      SPRING_DATASOURCE_USERNAME: "finley"
+      SPRING_DATASOURCE_PASSWORD: "password"
