--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
 
   db:
-    image: {{ registry_host }}:db
+    image: saintabel/cl_lab5_event_reminder:db
     container_name: db
     ports:
       - "3306:3306"
@@ -12,7 +12,7 @@ services:
       MYSQL_PASSWORD: "root"
 
   bot:
-    image: {{ registry_host }}:bot
+    image: saintabel/cl_lab5_event_reminder:bot
     container_name: bot
     ports:
       - "8081:8081"
