--- a/create_env.playbook.yaml
+++ b/create_env.playbook.yaml
@@ -11,7 +11,7 @@
 
     - name: Add tg host
       add_host:
-        name: event_reminder_server
+        name: docker_server
         groups: nodes
         ansible_host: "{{ trfrm.outputs.servers.value.docker_server }}"
         ansible_ssh_private_key_file: ~/.ssh/id_rsa
