--- a/create_env.playbook.yaml
+++ b/create_env.playbook.yaml
@@ -11,7 +11,7 @@
 
     - name: Add tg host
       add_host:
-        name: docker_server
+        name: docker_serv
         groups: nodes
         ansible_host: "{{ trfrm.outputs.servers.value.docker_server }}"
         ansible_ssh_private_key_file: ~/.ssh/id_rsa
@@ -26,7 +26,7 @@
         host: "{{ trfrm.outputs.servers.value.docker_server }}"
         port: 22
 
-- hosts: docker_server
+- hosts: docker_serv
   name: Start docker server
   become: yes
   vars:
