--- a/bot/src/main/resources/application.properties
+++ b/bot/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 
 server.port=8081
 
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/event_reminder
+spring.r2dbc.url=r2dbc:mysql://db:3306/event_reminder
 spring.r2dbc.username=root
 spring.r2dbc.password=rokkiy123
 
